# inverse_dynamics_control

./: CMakeLists.txt  README.md
archivos_informe/lab3/: data_circ.csv  data_inc_c.csv  data_inc_g.csv  data_pd.csv
archivos_informe/lab3/matlab/: Kd_Kp.m
launch/: pd_controller_launch.py
src/: dynamics_cancellation.cpp  pd_controller.cpp
